added ext-dom as a requirement

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     ],
     "require":{
         "php":">=5.3.2",
+        "ext-dom":"*",
         "kriswallsmith/buzz":"*"
     },
     "autoload": {
